--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Run mypy
+name: CI
 
 on:
   push:
@@ -22,8 +22,10 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install --upgrade pip
-          pip install '.'
-          pip install mypy
+          pip install '.[testing]'
       - name: Run mypy
         run: |
           mypy --install-types --non-interactive ./lolexport
+      - name: Run flake8
+        run: |
+          flake8 ./lolexport
